openshift.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node-hello
    name: node-hello
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node-hello
    name: node-hello
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: node-hello:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/japsu/node-hello.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nodejs:8
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: 5c6b_uwkhLTY7Z9VZ2RU
      type: GitHub
    - generic:
        secret: aLFd-h4-Bb2gFM0hLwKE
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node-hello
    name: node-hello
  spec:
    replicas: 1
    selector:
      app: node-hello
      deploymentconfig: node-hello
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: node-hello
          deploymentconfig: node-hello
      spec:
        containers:
        - image: node-hello:latest
          name: node-hello
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3            
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - node-hello
        from:
          kind: ImageStreamTag
          name: node-hello:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: node-hello
    name: node-hello
  spec:
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: node-hello
      deploymentconfig: node-hello
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    name: node-hello
  spec:
    to:
      kind: Service
      name: node-hello
kind: List
metadata: {}
